unpackaged/main/default/objects/HI_Benefit_Change_Application__c/HI_Benefit_Change_Application__c.object-meta.xml
<CustomObject>
    <label>HI Benefit Change Application</label>
    <nameField>
        <displayFormat>CHANGE-APPLICATION-{000000000}</displayFormat>
        <label>HI Benefit Change Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Benefit Change Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>