unpackaged/main/default/objects/HI_Benefit_Change_Application__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>ADD_COVERAGE
ADD_MEDICAL_CARRIER
ADD_MEDICAL_PLAN
REPLACE_COVERAGE</description>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>