unpackaged/main/default/objects/HI_Benefit_Change_Application__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <label>HI Benefit Change Application Created</label>
    <type>DateTime</type>
</CustomField>