unpackaged/main/default/objects/HI_Benefit_Change_Application__c/fields/Enrollees__c.field-meta.xml
<CustomField>
    <fullName>Enrollees__c</fullName>
    <description>The number of benefit eligible employees and owners.</description>
    <label>Enrollees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>