unpackaged/main/default/objects/HI_Benefit_Change_Application__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>The external record ID from the source system, benefit_change_application.</description>
    <externalId>true</externalId>
    <label>HI Benefit Change Application Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>