unpackaged/main/default/objects/HI_Benefit_Change_Application__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <label>Waiting Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>